2004-02-24  Alexander V. Lukyanov <lav@yars.free.net>

	* ChmodJob.cc: fix recursing.

2004-02-19  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: don't write negative amount of chars.

2004-02-17  Alexander V. Lukyanov <lav@yars.free.net>

	* StringSet.cc, StringSet.h: new files; implement string array for StatusLine.
	* ArgV.cc, ArgV.h: base on StringSet.
	* CmdExec.cc: modify CombineQuoted based on StringSet.
	* FileFeeder.cc: send CONT to feeder process.
	* FileSetOutput.cc, Filter.cc, FindJob.cc, FindJobDu.cc, PtyShell.cc,
	  SleepJob.cc, TreatFileJob.cc, mgetJob.cc, mkdirJob.cc, mkdirJob.h:
	  fix ArgV const-ness.
	* StatusLine.cc, StatusLine.h: base on StringSet.
	* commands.cc: fix ArgV const-ness; implement `source -e' - execute output
	  of external command.
	* Makefile.am: add StringSet.

2004-02-13  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: new option --use-pget-n; implement using pget for
	  transfers; fixed bug which caused old files to be removed even
	  if -e option was not specified.
	* ArgV.h: allow appending numbers.
	* GetJob.h: (RemoveSourceFiles) add method named as in CopyJob.
	* pgetJob.h: make NewChunk protected.
	* resource.cc: add mirror:use-pget-n resource.

2004-02-12  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc, StatusLine.h: support multiline status.
	* ftpclass.cc: fix hang on data eof (introduced in last change set).
	* MirrorJob.cc: --ignore-size and --only-missing options added.
	* netrc.cc, netrc.h: allow user matching.
	* commands.cc: user netrc user matching; log netrc actions;
	  set password immediately to skip looking up netrc second time.

2004-02-09  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: (SetNewerThan) try get_date first.
	* SleepJob.cc: print get_date error.
	* commands.cc: fix mirror help; get1 --target-position instead of
	  --target-region.
	* getdate.y, getdate.h: save error string instead of printing.